@@ -17,14 +17,29 @@
 #  http://www.r-project.org/Licenses/
 
 ### Originates from Deepayan Sarkar as  updateList() from 'lattice' package
-modifyList <- function(x, val)
+
+modifyList <- function(x, val, keep.null = FALSE)
 {
     stopifnot(is.list(x), is.list(val))
     xnames <- names(x)
-    for (v in names(val)) {
-	x[[v]] <-
-	    if (v %in% xnames && is.list(x[[v]]) && is.list(val[[v]]))
-		modifyList(x[[v]], val[[v]]) else val[[v]]
+    vnames <- names(val)
+    ## Will not update unnamed components.  FIXME: What if names are repeated? Warn?
+    vnames <- vnames[vnames != ""]
+    if (keep.null) {
+        for (v in vnames) {
+            x[v] <-
+                if (v %in% xnames && is.list(x[[v]]) && is.list(val[[v]]))
+                    list(modifyList(x[[v]], val[[v]], keep.null = keep.null))
+                else val[v]
+        }
+    }
+    else { 
+        for (v in vnames) {
+            x[[v]] <-
+                if (v %in% xnames && is.list(x[[v]]) && is.list(val[[v]]))
+                    modifyList(x[[v]], val[[v]], keep.null = keep.null)
+                else val[[v]]
+        }
     }
     x
 }
